--- a/layout3.css
+++ b/layout3.css
@@ -105,11 +105,8 @@ img{
 .content{
 	text-align: justify;
 	border-top:.5px solid #E5E7E9;
-	border-bottom:.5px solid #E5E7E9;
 	padding-top: 25px;
 	margin-top: 17px;
-	padding-bottom: 40px;
-	margin-bottom: 40px;
 }
 .content h1{
 	font-family: Arial;
@@ -216,8 +213,10 @@ form.example button {
 	margin: auto;
 	float: left;
 	margin-left: 4%;
-	margin-top:0;
-	margin-bottom: 65px;
+	margin-top:30px;
+	border-top:.5px solid #E5E7E9;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 @media screen and (max-width: 1007px){
 	.div1{
